# claude-code-openai-proxy

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  run-proxy.yml
src/: proxy.py
tests/: test_translation.py
